--- a/Kubernetes/deployment.yml
+++ b/Kubernetes/deployment.yml
@@ -19,3 +19,5 @@ spec:
         image: devopscloudlabs/netflix:latest
         ports:
         - containerPort: 80
+          automountServiceAccountToken: false
+
